-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.3
-
Component/s: None
-
Labels:None
-
Environment:
Max OSX
When compiling any recent (=git master) version of Thrift on Mac OSX in release mode, the compiler reports an error in TBufferTransports.hpp due to std::malloc/std::free not being found. The following patch fixes the compiler error (also attached as patch file):
diff --git a/lib/cpp/src/thrift/transport/TBufferTransports.h b/lib/cpp/src/thrift/transport/TBufferTransports.h
index eb08d62..17d617d 100644
— a/lib/cpp/src/thrift/transport/TBufferTransports.h
+++ b/lib/cpp/src/thrift/transport/TBufferTransports.h
@@ -21,6 +21,7 @@
#define THRIFT_TRANSPORT_TBUFFERTRANSPORTS_H 1
+#include <cstdlib>
#include <cstring>
#include <limits>
#include <boost/scoped_array.hpp>